--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/healthcare.svg" />
+    <link rel="apple-touch-icon" href="/healthcare.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>Healthcare+ | Care. Compassion. Cure.</title>
   </head>
   <body>
     <div id="root"></div>
